--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:label="maps_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyBrNPZR_sVJ9ypIajo2Hvxy17LdBnf4xU0"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
